--- a/index.html
+++ b/index.html
@@ -29,27 +29,28 @@
 		<div class="container">
 
 			<div class="top">
-			<h1>Age is No BARRIER
-				<br><br>
-				YOU Want Health 
-				<br><br>
-				WORK FOR IT ? EARN IT !
-			</h1>
-			<div class="more">
-				<span>
-					<a href="#secabout">Read more</a>
-				</span>
-				<!-- <span>Read more</span> -->
-				<a href="#secabout"><img src="img/arrow.png" width="50" alt=""></a>
-			</div>	
+				<h1>Age is No BARRIER
+					<br><br>
+					YOU Want Health 
+					<br><br>
+					WORK FOR IT ? EARN IT !
+				</h1>
+				<div class="more">
+					<span>
+						<a href="#secabout">Read more</a>
+					</span>
+					<!-- <span>Read more</span> -->
+					<a href="#secabout"><img src="img/arrow.png" width="50" alt=""></a>
+				</div>	
 			</div>
-			
-			<div class="fleche">
-				<img src="img/fleche.png" alt="">
+			<div class="join">
+				<div class="fleche">
+					<img src="img/fleche.png" alt="">
+				</div>
+				<div class="joinus">
+					<a href="register.html">JOIN US</a>
+				</div>				
 			</div>
-			<div class="joinus">
-				<a href="register.html">JOIN US</a>
-			</div>				
 		</div>
 	</section>
 
